# ea-compiler

./: .gitignore  BENCHMARK_ERRORS_INVESTIGATION.md  BENCHMARK_SUMMARY.md  CLAUDE.md  Cargo.toml  Eä-v0.2-Complete-Roadmap.md  File_validation.ea  Go-vs-Ea-Strategic-Analysis.md  HashMap_test_corrected.ea  HashSet_stress_test.ea  HashSet_validation.ea  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE-VALIDATION-SUMMARY.md  README.md  RELEASE-NOTES-v0.1.1.md  SIMD Code Generation Completion Plan.md  SIMD implementation progress report.md  SIMD_Session_Progress_Report.md  String_stress_test.ea  String_test_corrected.ea  String_test_new_only.ea  String_validation.ea  TODO-IMPLEMENT.md  V0.2-Readiness-Final-Assessment.md  Validated-Performance-Claims-Report.md  Vec_test_corrected.ea  Week1-Week2-Progress-Report.md  Week3-4-Foundation-Progress-Report.md  Week3-Production-Readiness-Report.md  Week5-6-Performance-Validation-Report.md  advanced_memory_simd_type_fix_validation.ea  advanced_memory_simd_type_fix_validation_script.sh  basic_hashset_test.ea  basic_simd_hardware_fix_validation.ea  basic_simd_hardware_fix_validation_script.sh  basic_test.ea  benchmark_array_sum.c  benchmark_array_sum.ea  benchmark_array_sum.rs  (+120 more)
.autogen/: README.md  config.yaml
.ea_jit_cache/: jit_cache.json
.github/workflows/: ci.yml
benches/: benchmark.rs  competitive_benchmarks.rs  competitive_performance_validation.rs  compilation_performance.rs  cross_language_comparison.rs  cross_platform_validation.rs  ea_advanced_vs_full_pipeline.rs  evidence_based_benchmarks.rs  frontend_performance.rs  honest_full_pipeline_benchmarks.rs  minimal_honest.rs  realistic_performance_benchmarks.rs  simd_performance_benchmarks.rs  simple_cross_language.rs  simple_honest_bench.rs  simple_performance_test.rs  simple_performance_validation.rs  test_simple_bench.rs
benchmark_results/: benchmark_summary_20250709_190502.txt  benchmark_summary_20250709_235030.txt
demo/: AI-Optimized Documentation Process.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_PROCESS.md  README.md  complete_image_filter_validation.sh  demo.md  ea_image_filter.ea  expected_output.txt  image_processor_complete.ea  image_processor_pure_ea.ea  image_processor_validation.sh  simd_test.ea  simple_test.ea  test_input.pgm
docs/: getting-started.md
examples/: README.md  advanced_features.ea  advanced_memory_simd.ea  basic_simd.ea  demo_showcase.ea  fibonacci.ea  optimize_attribute_demo.ea  simd_benchmark_suite.ea  simd_example.ea  simd_memory_demo.ea  simple_load_store.ea  stdlib_syntax.ea  vector_add.ea
examples/.ea_jit_cache/: jit_cache.json
scripts/: check_go.rs  competitive_performance_report.md  competitive_performance_results.json  competitive_results_analysis.py  complete_competitive_analysis.json  complete_competitive_analysis.py  complete_competitive_report.md  comprehensive_performance_analysis.json  comprehensive_performance_analysis.md  comprehensive_performance_analysis.py  cross_platform_validation.sh  final_competitive_analysis.json  final_competitive_analysis.py  final_competitive_report.md  performance_summary.json  performance_summary.md  performance_summary.py  performance_validation.py  quick_cross_platform_check.sh  run_honest_benchmarks.py  simd_validation.sh
src/: ast.rs  error.rs  execution_mode.rs  incremental_compilation.rs  jit_cache.rs  jit_cached.rs  jit_execution.rs  lib.rs  llvm_optimization.rs  lsp_main.rs  main.rs  memory_profiler.rs  parallel_compilation.rs  parser_optimization.rs  resource_manager.rs  streaming_compiler.rs  utils.rs
src/codegen/: mod.rs
src/comptime/: mod.rs
src/lexer/: mod.rs  tests.rs  tokens.rs
src/lsp/: mod.rs
src/memory/: mod.rs
src/package/: mod.rs
src/parser/: mod.rs  parser_fix.rs
src/runtime/: cli_runtime.c  file_runtime.c  hashmap_runtime.c  hashset_runtime.c  string_runtime.c  vec_runtime.c
src/simd_advanced/: mod.rs
src/stdlib/: collections.rs  io.rs  math.rs  mod.rs  string.rs
src/type_system/: hardware.rs  mod.rs  simd_validator.rs  types.rs
templates/validation/: task_prompt_template.md  validation_script_template.sh
tests/: Cargo.toml  README.md  compilation_tests.rs  core_functionality_tests.rs  debug_sigsegv.rs  fibonacci.eä  fibonacci_test.rs  integration_tests.rs  large_scale_validation.rs  lexer_tests.rs  parser_error_recovery_tests.rs  production_stress_tests.rs  simd_codegen_tests.rs  simd_integration_tests.rs  simd_lexer_tests.rs  stdlib_integration_tests.rs  type_system_tests.rs
tests/examples/: vector_add.ea
vscode-extension/: README.md  ea-language-support-0.1.1.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: ea.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: ea.tmGrammar.json
