[package]
name = "ea-compiler"
version = "0.1.1"
edition = "2021"
description = "A high-performance compiler for the Eä programming language with built-in SIMD support"
authors = ["Peter Lukka <peter.lukka@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/petlukk/ea-compiler-private"
documentation = "https://docs.rs/ea-compiler"
readme = "README.md"

[dependencies]
# Lexer dependencies
logos = { version = "0.13.0", features = ["export_derive", "std"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (made optional for the debug feature)
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }

# Utilities
lazy_static = "1.4"
regex = "1.10"

# LLVM integration - using LLVM 14 on Ubuntu 22.04
inkwell = { version = "0.4", features = ["llvm14-0"], optional = true }

# System library bindings for JIT symbol resolution
libc = "0.2"
libm = "0.2"
# Dynamic library loading for robust symbol resolution
libloading = "0.8"

[dev-dependencies]
# Testing
rstest = "0.18"
assert_matches = "1.5"
pretty_assertions = "1.4"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "ea_compiler"
path = "src/lib.rs"

[[bin]]
name = "ea"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "simd_performance_benchmarks"
harness = false

[features]
# Enable LLVM by default for development and testing
default = ["llvm"]
cli = []
debug-lexer = ["log", "simplelog"]
llvm = ["inkwell"]  # Enable LLVM code generation with LLVM 14

# Profile for testing with full features
[profile.test]
# Ensure tests run with optimizations for better LLVM performance
opt-level = 1

[workspace]
members = [
    # Add workspace members here if needed
]

