[package]
name = "ea-compiler"
version = "0.1.1"
edition = "2021"
description = "A high-performance compiler for the Eä programming language with built-in SIMD support"
authors = ["Peter Lukka <peter.lukka@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/petlukk/ea-compiler-private"
documentation = "https://docs.rs/ea-compiler"
readme = "README.md"

[dependencies]
# Lexer dependencies
logos = { version = "0.13.0", features = ["export_derive", "std"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (made optional for the debug feature)
log = { version = "0.4", optional = true }
simplelog = { version = "0.12", optional = true }

# Utilities
lazy_static = "1.4"
regex = "1.10"

# Parallel processing
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Serialization for package management (always available)
toml = "0.8"

# LLVM integration - using LLVM 14 on Ubuntu 22.04
inkwell = { version = "0.4", features = ["llvm14-0"], optional = true }

# System library bindings for JIT symbol resolution
libc = "0.2"
libm = "0.2"
# Dynamic library loading for robust symbol resolution
libloading = "0.8"

# Serialization (used by both LSP and package management)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LSP server dependencies
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
dashmap = { version = "5.5", optional = true }
env_logger = { version = "0.10", optional = true }

[dev-dependencies]
# Testing
rstest = "0.18"
assert_matches = "1.5"
pretty_assertions = "1.4"
tempfile = "3.8"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "ea_compiler"
path = "src/lib.rs"

[[bin]]
name = "ea"
path = "src/main.rs"

[[bin]]
name = "ea-lsp"
path = "src/lsp_main.rs"
required-features = ["lsp"]

[[bench]]
name = "frontend_performance"
harness = false

[[bench]]
name = "compilation_performance"
harness = false

[[bench]]
name = "cross_language_comparison"
harness = false

[[bench]]
name = "ea_advanced_vs_full_pipeline"
harness = false

[[bench]]
name = "simple_cross_language"
harness = false

[features]
# Enable LLVM by default for development and testing
default = ["llvm"]
cli = []
debug-lexer = ["log", "simplelog"]
llvm = ["inkwell"]  # Enable LLVM code generation with LLVM 14
lsp = ["tower-lsp", "tokio", "dashmap", "env_logger", "llvm"]  # LSP server with performance analysis

# Profile for testing with full features
[profile.test]
# Ensure tests run with optimizations for better LLVM performance
opt-level = 1

[workspace]
members = [
    # Add workspace members here if needed
]

